add whatsapp to contact

--- a/index.html
+++ b/index.html
@@ -849,6 +849,25 @@
             height: 22px
         }
 
+        /* WhatsApp contact button */
+        .contact.whatsapp {
+            background: linear-gradient(135deg, #25D366, #128C7E);
+            border: 1px solid rgba(18, 140, 126, .6);
+            color: #081016;
+            box-shadow: 0 8px 18px rgba(18, 140, 126, .35);
+        }
+        .light .contact.whatsapp {
+            color: #081016;
+        }
+        .contact.whatsapp:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 12px 24px rgba(18, 140, 126, .45);
+        }
+        .contact.whatsapp svg {
+            width: 22px;
+            height: 22px;
+        }
+
         footer {
             border-top: 1px solid rgba(255, 255, 255, .07);
             padding: 26px 0;
@@ -1138,6 +1157,10 @@
                                 src="assets/contact_icons/github-icon.png" alt="GitHub"/>GitHub</a>
                         <a class="contact" target="_blank" href="https://huggingface.co/AmitIsraeli">
                             <img src="assets/contact_icons/huggingface-icon.png" alt="Hugging Face"/>Hugging Face
+                        </a>
+                        <a class="contact whatsapp" target="_blank" rel="noopener" href="https://wa.me/972534326597?text=Hi%20Amit%2C%20I%27d%20love%20to%20connect%20about%20your%20work.">
+                            <svg viewBox="0 0 32 32" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path fill="#fff" d="M19.11 17.38c-.3-.15-1.77-.87-2.04-.97-.27-.1-.47-.15-.68.15-.2.3-.78.97-.96 1.17-.18.2-.36.22-.66.07-.3-.15-1.26-.46-2.4-1.46-.89-.79-1.49-1.76-1.66-2.06-.17-.3-.02-.47.13-.62.13-.13.3-.36.45-.54.15-.18.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.68-1.64-.93-2.25-.24-.58-.49-.5-.68-.5-.18 0-.37-.01-.57-.01-.2 0-.52.08-.79.37-.27.3-1.04 1.02-1.04 2.49 0 1.47 1.06 2.89 1.2 3.09.15.2 2.09 3.2 5.06 4.48 2.98 1.28 2.98.85 3.52.82.54-.03 1.77-.72 2.02-1.42.25-.7.25-1.3.17-1.42-.08-.12-.27-.2-.57-.35z"/></svg>
+                            WhatsApp
                         </a>
                     </div>
                 </div>
@@ -1897,6 +1920,10 @@
                                 src="assets/contact_icons/github-icon.png" alt="GitHub"/>GitHub</a>
                         <a class="contact" target="_blank" href="https://huggingface.co/AmitIsraeli">
                             <img src="assets/contact_icons/huggingface-icon.png" alt="Hugging Face"/>Hugging Face
+                        </a>
+                        <a class="contact whatsapp" target="_blank" rel="noopener" href="https://wa.me/972534326597?text=Hi%20Amit%2C%20I%27d%20love%20to%20connect%20about%20your%20work.">
+                            <svg viewBox="0 0 32 32" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path fill="#fff" d="M19.11 17.38c-.3-.15-1.77-.87-2.04-.97-.27-.1-.47-.15-.68.15-.2.3-.78.97-.96 1.17-.18.2-.36.22-.66.07-.3-.15-1.26-.46-2.4-1.46-.89-.79-1.49-1.76-1.66-2.06-.17-.3-.02-.47.13-.62.13-.13.3-.36.45-.54.15-.18.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.68-1.64-.93-2.25-.24-.58-.49-.5-.68-.5-.18 0-.37-.01-.57-.01-.2 0-.52.08-.79.37-.27.3-1.04 1.02-1.04 2.49 0 1.47 1.06 2.89 1.2 3.09.15.2 2.09 3.2 5.06 4.48 2.98 1.28 2.98.85 3.52.82.54-.03 1.77-.72 2.02-1.42.25-.7.25-1.3.17-1.42-.08-.12-.27-.2-.57-.35z"/></svg>
+                            WhatsApp
                         </a>
                     </div>
                 </div>
