add github for sana project

--- a/index.html
+++ b/index.html
@@ -450,6 +450,9 @@
                                     experimenting with diffusion behaviour, conditioning, and
                                     fine-tuning tricks.
                                 </p>
+                                <a class="contact" target="_blank" href="https://github.com/amit154154/Sana-Simplified">
+                                        <img src="assets/contact_icons/github-icon.png" alt="GitHub"/>Repo
+                                </a>
                                 <div class="tag-row">
                                     <span class="tag t-img">Diffusion</span>
                                     <span class="tag t-cv">Sana / Sana Sprint</span>
