--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@
                 My focus is on thoughtful research and solid engineering.
             </p>
             <div class="cta-row">
-                <a class="cv-btn" id="cvBtn" href="assets/Amit-Israeli-FlowCV-Resume-20251122 (1).pdf" download>
+                <a class="cv-btn" id="cvBtn" href="assets/Amit-Israeli-FlowCV-Resume-20251210.pdf" download>
                     <img src="assets/download_cv_image.png" alt="Download CV">
                 </a>
             </div>
